chore: rename auth to authentication
