# internal/module/authentication/presentation/http/controller/verify_otp_and_register.go
@@ -4,7 +4,7 @@ import (
 	"errors"
 	"net/http"
 
-	"github.com/TrueFlowDev/Backend/internal/module/auth/application/usecase"
+	"github.com/TrueFlowDev/Backend/internal/module/authentication/application/usecase"
 	"github.com/TrueFlowDev/Backend/internal/platform/server/http/validation"
 	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator/v10"
@@ -50,7 +50,7 @@ func RegisterVerifyOTPAndRegisterController(
 //	@Success		201		{object}	VerifyOTPAndRegisterControllerOutput
 //	@Failure		400		{object}	xerr.SwaggerErrOutput
 //	@Failure		500		{object}	xerr.SwaggerErrOutput
-//	@Router			/auth/verify-otp [post]
+//	@Router			/authentication/verify-otp [post]
 func (c *VerifyOTPAndRegisterController) VerifyOTPAndRegister(ctx *gin.Context) {
 	var input VerifyOTPAndRegisterControllerInput
 	if err := ctx.ShouldBindJSON(&input); err != nil {
